Wire together orchestrator and FileHandler (step 7); modernize serial layer
FileHandler (new):
- readBinaryFile, writeText, writeBinary — no clipboard support

SharpDataExchange.main() (complete):
- get: receive via serial → detect → convert (BINARY_BASIC/RESERVE/VARS/MACHINE)
  → write file; detokenizes BINARY_BASIC via BinaryBasicDetokenizer
- put: read file → detect → convert ASCII* types to binary with CE-158 header
  → send via DataSender; BINARY_* and MACHINE sent as-is
- findHeaderOffset() scans for CE-158/PC-1600 magic to handle capture artifacts
- deriveFilename() extracts uppercase basename (≤16 chars) for CE-158 filename field
- openPort() centralizes baud-rate/flow-control selection per device

Java 21 modernizations (ported code was Java 11):
- Watchdog: Thread.ofVirtual().start() replaces new Thread() + setDaemon(true)
- DataReceiver: CountDownLatch replaces synchronized/wait/notifyAll for
  cleaner single-shot transfer-complete signalling

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>